tests/ui/imports/issue-109148.stderr
error: macro-expanded `extern crate` items cannot shadow names passed with `--extern`
  --> $DIR/issue-109148.rs:6:9
   |
LL | / macro_rules! m {
LL | |     () => {
LL | |         extern crate core as std;
   | |         ^^^^^^^^^^^^^^^^^^^^^^^^^
LL | |
LL | |     }
LL | | }
   | |_- in this expansion of `m!`
LL |
LL |   m!();
   |   ---- in this macro invocation

error: aborting due to previous error

